# atl_launch

atl_launch/: CMakeLists.txt  package.xml
atl_launch/launch/: ai.launch.py  all.launch.py  camera1.launch.py  camera2.launch.py  core.launch.py  pass.launch.py  record.launch.py  viz.launch.py
atl_viz/: CMakeLists.txt  package.xml
atl_viz/meshes/: heron_base.stl  main_wing_axis.stl  tail_fin_axis.stl
atl_viz/meshes/old/: aileron1_z_up.stl  aileron2_z_up.stl  paravane_z_up.stl
atl_viz/models/: basic_viz.urdf
